--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-emoji-render": "^2.0.1",
+    "react-router-dom": "^6.27.0",
+    "twemoji": "^14.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
