--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-emoji-render": "^2.0.1",
     "react-router-dom": "^6.27.0",
+    "react-signature-canvas": "^1.0.6",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
