--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-emoji-render": "^2.0.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.27.0",
     "react-signature-canvas": "^1.0.6",
     "react-toastify": "^10.0.6"
