--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.27.0",
     "react-signature-canvas": "^1.0.6",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
