--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.66.0",
     "antd": "^5.21.6",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
