--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.66.0",
     "antd": "^5.21.6",
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "nanoid": "^5.0.7",
@@ -21,11 +22,15 @@
     "react-dom": "^18.3.1",
     "react-emoji-render": "^2.0.1",
     "react-hot-toast": "^2.5.1",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
+    "react-player": "^3.2.0",
     "react-router-dom": "^6.27.0",
     "react-signature-canvas": "^1.0.6",
+    "react-slick": "^0.30.3",
     "react-spinners": "^0.15.0",
     "react-toastify": "^10.0.6",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.10",
     "yup": "^1.6.1"
   },
   "devDependencies": {
