--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "lucide-react": "^0.539.0",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -24,7 +25,7 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.5.0",
     "react-player": "^3.2.0",
-    "react-router-dom": "^6.27.0",
+    "react-router-dom": "^6.30.1",
     "react-signature-canvas": "^1.0.6",
     "react-slick": "^0.30.3",
     "react-spinners": "^0.15.0",
